--- a/Infixel/Info.plist
+++ b/Infixel/Info.plist
@@ -6,5 +6,11 @@
 	<array>
 		<string>Bungee-Regular.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
